lab-01-yml-files/vote/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ws-app01
  name: vote
  namespace: attin-studio
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    deploymentconfig: vote
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
